<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Visualizer"
    android:clickable="true"
    android:background="@color/grayBlue"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_weight="6">
        <Spinner
            android:id="@+id/spinner_traversal"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/button_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:padding="5dp"
            android:src="@android:drawable/ic_media_previous"
            android:background="@drawable/visulizer_button"/>

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:src="@android:drawable/ic_media_next"
            android:background="@drawable/visulizer_button"/>

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:src="@android:drawable/ic_media_play"
            android:background="@drawable/visulizer_button"/>

        <ImageButton
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_pause"
            android:background="@drawable/visulizer_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="6">

        <EditText
            android:id="@+id/start_value"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"
            android:ems="10"
            android:gravity="center"
            android:hint="Start Node"
            android:inputType="number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/end_value"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="7dp"
            android:ems="10"
            android:gravity="center"
            android:hint="End Node"
            android:inputType="number"
            android:textSize="18sp" />
        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/visulizer_button"
            android:text="Clear"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/backgroundWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <com.example.datastructurevisualizer.VisualizerCanvas
        android:id="@+id/graph_visualizer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="2.5"
        android:background="@color/backgroundWhite"
 />

    <ScrollView
        android:id="@+id/printout_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5.5">

        <TextView
            android:id="@+id/printout_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:layout_marginLeft="15dp"
            android:layout_gravity="top"
            android:layout_marginRight="15dp"
            android:textSize="15sp"/>
    </ScrollView>

    <TableRow
        android:gravity="center"
        android:layout_weight="6"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp">
        <Spinner
            android:id="@+id/spinner_graphOptions"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:layout_marginRight="5dp"/>
        <Button
            android:id="@+id/button_load"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/visulizer_button"
            android:textColor="@color/backgroundWhite"
            android:text="Select"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/button_info"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:padding="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/visulizer_button"
            android:scaleType="fitXY"
            android:src="@drawable/ic_information2" />

</TableRow>


</LinearLayout>