...
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dijkstra's Shortest Path"
            android:layout_gravity="left"
            android:textSize="@dimen/text_info_header"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text"
            android:textStyle="italic"
...
